    correctly reversed. Fixed issues with view values containing whitespace.

2008-06-09 cjg
 * If a config file ends with .xml and does not match one of the config file
    formats, it's just set as "XML".
 * XML files may be viewed and edited by people with the other permissions
    to view/edit config files. Fixing #3339

2008-06-09 tdb
 * Replaced Unicode::String with Perl-native utf-8 string processing
 * Metafield::Text now flags data coming from the database as utf-8

2008-06-11 cjg 
 * Files grabbed from URLs now correctly run throught the guess format 
    method, so don't just end up as "Other".

2008-06-13 cjg
 * Fixed issue with single quotes in javascript confirm messages.
 * No "action" on a search is now considered a search action, if there were
    other cgi parameters set. Fixing #2975.

2008-06-13 cjg
 * Fixed issue in issues which meant XML was being double escaped.

2008-06-17 cjg
 * Fixed a couple of parentNode DOM calls, which should have been 
    getParentNode
 * Fixed a bug in the config viewer which stoped namedsets with underscores
    being counted as namedsets. (extended the regexp)

2008-06-23 tdb
 * If a user's field list contains an invalid field fallback gracefully
 * Don't use Scalar::Util::weaken if the vendor didn't install it

2008-06-24 tdb
 * BibTeX month entries being added even without a month value
 * BibTeX import can now use utf-8 characters (if the file has a BOM)
 * Refactored Import::TextFile to call input_text_fh (supports BOMs on input_fh calls)

2008-06-24 tdb
 * Added the trailing slash to view links

2008-06-26 tdb
 * Added AJAX-based file upload progress reporting
 * Only allow batch editing of eprint objects

2008-07-03 tdb
 * Removed unused database method "create_login_tickets_table"

2008-07-04 tdb
 * Changed default file hashing to use SHA-256

2008-07-07 tdb
 * Added a USR2 signal handler for debugging 100% cpu situations
 * If phrases or workflow aren't writable don't abort when writing new fields
