@@ -7614,3 +7614,6 @@ EPRINTS-3.1-beta-2
  * Added a USR2 signal handler for debugging 100% cpu situations
  * If phrases or workflow aren't writable don't abort when writing new fields
 
+2008-07-10 tdb
+ * Added default account for CrossRef imports, fixing #3397
+
